--- a/src/app/dashboard/default/default-dashboard.component.html
+++ b/src/app/dashboard/default/default-dashboard.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="col-lg-6">
         <div class="text-md-right m-v-10">
-            <button   nzTitle="Click this to Search"  nz-tooltip nzPlacement="left" nz-button nzType="primary"><i nz-icon nzType="search"></i>Search</button>
+            <button   nzTitle="Click this to Search" (click)="search()"  nz-tooltip nzPlacement="left" nz-button nzType="primary"><i nz-icon nzType="search"></i>Search</button>
             <nz-divider style="background: #000" nzType="vertical"></nz-divider>
-            <button nzTitle="Click this to Reset" nzPlacement="bottom" nz-tooltip   nz-button nzType="default"> <i nz-icon nzType="reload"
+            <button nzTitle="Click this to Reset" (click)="reset()"  nzPlacement="bottom" nz-tooltip   nz-button nzType="default"> <i nz-icon nzType="reload"
                     theme="outline"></i>Reset</button>
         </div>
     </div>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-12">
                     <div class="media align-items-center">
-                        <nz-radio-group [(ngModel)]="selectedDateType">
+                        <nz-radio-group  [(ngModel)]="searchModel.SelectedDateType" (ngModelChange)="onDateTypeChange($event)" >
                             <label nz-radio nzValue="A">Revision Date</label>
                             <label nz-radio nzValue="B">Published Date</label>
 
@@ -108,8 +108,8 @@
 
                                 </div>
                                 <div class="col-lg-3">
-                                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch
-                                        nzPlaceHolder="Select Condition" [(ngModel)]="selectedValue">
+                                    <nz-select [nzDisabled] = "isDaysOptionSelected" style="width: 100%;" nzSize="small" (ngModelChange)="onConditionChange($event)" nzShowSearch [(ngModel)]="searchModel.PublishDateFilter.FilterType"
+                                        nzPlaceHolder="Select Condition">
                                         <nz-option nzLabel="Equals" nzValue="Equals"></nz-option>
                                         <nz-option nzLabel="Greater Than Equal To" nzValue="GreaterThanEqualsTo">
                                         </nz-option>
@@ -118,10 +118,23 @@
                                     </nz-select>
                                 </div>
                                 <div class="col-lg-8">
-                                    <nz-date-picker *ngIf="selectedValue != 'Range'" [nzSize]="size"
-                                        [nzFormat]="dateFormat"></nz-date-picker>
-                                    <nz-range-picker *ngIf="selectedValue === 'Range'" nzSize="default"
-                                        [nzFormat]="dateFormat"></nz-range-picker>
+                                    <nz-date-picker [nzDisabled] = "isDaysOptionSelected" *ngIf="!showRangeFilter" nzSize="small" [(ngModel)]="searchModel.PublishDateFilter.StartDate"
+                                        [nzFormat]="dateFormat" (ngModelChange)="onChange($event)"></nz-date-picker>
+                                    <nz-range-picker [nzDisabled] = "isDaysOptionSelected" *ngIf="showRangeFilter" nzSize="default" [(ngModel)]="searchModel.PublishDateFilter.StartDate"
+                                        [nzFormat]="dateFormat" (ngModelChange)="onChange($event)"></nz-range-picker>
+                                </div>
+                            </div>
+                        </div>
+                        <nz-divider></nz-divider>
+                        <div class="col-lg-12">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <label (ngModelChange) = "onDaysOptionClicked($event)" [(ngModel)]="isDaysOptionSelected" nz-checkbox > Date in Last</label>
+                                    <nz-input-number [nzSize]="'small'" [nzStep]="1"></nz-input-number>
+                                    <label> Days</label>
+                                </div>
+                                <div class="col-lg-8">
+                                   
                                 </div>
                             </div>
                         </div>
@@ -145,7 +158,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Spec Id" nzSize="small">
+                                    <input nz-input placeholder="Enter Spec Id" nzSize="small" [(ngModel)]="searchModel.SpecificationID">
                                 </div>
                             </div>
 
@@ -158,7 +171,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Product Name" nzSize="small">
+                                    <input nz-input placeholder="Enter Product Name" nzSize="small"  [(ngModel)]="searchModel.ProductName">
                                 </div>
                             </div>
 
@@ -190,7 +203,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter CAS" nzSize="small">
+                                    <input nz-input placeholder="Enter CAS" nzSize="small" [(ngModel)]="searchModel.CasNumber">
                                 </div>
                             </div>
                         </div>
@@ -202,7 +215,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Chemical Name" nzSize="small">
+                                    <input nz-input placeholder="Enter Chemical Name" nzSize="small" [(ngModel)]="searchModel.ChemicalName">
                                 </div>
                             </div>
                         </div>
@@ -214,7 +227,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Common Name" nzSize="small">
+                                    <input nz-input placeholder="Enter Common Name" nzSize="small" [(ngModel)]="searchModel.CommonName">
                                 </div>
                             </div>
                         </div>
@@ -234,7 +247,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Trade Name" nzSize="small">
+                                    <input nz-input placeholder="Enter Trade Name" nzSize="small" [(ngModel)]="searchModel.TradeName">
                                 </div>
                             </div>
 
@@ -247,7 +260,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="small size" nzSize="small">
+                                    <input nz-input placeholder="small size" nzSize="small" [(ngModel)]="searchModel.CommercialNames">
                                 </div>
                             </div>
 
@@ -260,7 +273,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="small size" nzSize="small">
+                                    <input nz-input placeholder="small size" nzSize="small" [(ngModel)]="searchModel.IUPAC">
                                 </div>
                             </div>
                         </div>
@@ -272,7 +285,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="small size" nzSize="small">
+                                    <input nz-input placeholder="small size" nzSize="small" [(ngModel)]="searchModel.INCODE">
                                 </div>
                             </div>
                         </div>
