--- a/src/app/dashboard/result/result.component.html
+++ b/src/app/dashboard/result/result.component.html
@@ -1,18 +1,80 @@
 <nz-card>
-    <nz-table #filterTable   #smallTable [nzData]="displayData"  nzSize="small">
+    <nz-table #filterTable #smallTable
+              [nzData]="displayData" [nzPaginationPosition]="'both'"
+              [nzLoading]="isDataInProcess" [nzShowSizeChanger]="true"
+              [nzScroll]="{x: '200px'}" [nzPageSizeOptions]="[5,10,30, 50 ,100]"
+              [nzFrontPagination]="true" [nzPageSize]="searchModalRequest.pageSize"
+              (nzPageSizeChange)="pageSizeChanged($event)"
+              (nzPageIndexChange)="pageChanged($event)"
+              nzSize="small"
+    >
         <thead (nzSortChange)="sort($event)" nzSingleSort>
-            <tr>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Address</th>
-            </tr>
+
+        <tr>
+            <th>ProductName</th>
+            <th>PDFName</th>
+            <th>PublishDate</th>
+            <th>RevisionDate</th>
+            <th>Path</th>
+            <th>Language</th>
+            <th>SpecificationID</th>
+            <th>TradeName</th>
+            <th>FMCBusiness</th>
+            <th>ActiveVersion</th>
+            <th>AuthorizedPortal</th>
+            <th>CMR</th>
+            <th>CasNumber</th>
+            <th>ChemicalName</th>
+            <th>CommercialNames</th>
+            <th>CommonName</th>
+            <th>EHSVersionNo</th>
+            <th>FileFormat</th>
+            <th>GENVARIANT</th>
+            <th>INCODE</th>
+            <th>IUPAC</th>
+            <th>LegacySDSID</th>
+            <th>LegacySpecID</th>
+            <th>ValidityArea</th>
+            <th>ValidityAreaDescription</th>
+            <th>WercsRevisionNo</th>
+            <th>WercsSubFormat</th>
+        </tr>
+
         </thead>
+
+
         <tbody>
-            <tr *ngFor="let data of filterTable.data">
-                <td>{{data.name}}</td>
-                <td>{{data.age}}</td>
-                <td>{{data.address}}</td>
+        <ng-template ngFor let-data [ngForOf]="smallTable.data">
+            <tr>
+                <td>{{data.ProductName}}</td>
+                <td>{{data.PDFName}}</td>
+                <td>{{data.PublishDate}}</td>
+                <td>{{data.RevisionDate}}</td>
+                <td>{{data.Path}}</td>
+                <td>{{data.Language}}</td>
+                <td>{{data.SpecificationID}}</td>
+                <td>{{data.TradeName}}</td>
+                <td>{{data.FMCBusiness}}</td>
+                <td>{{data.ActiveVersion}}</td>
+                <td>{{data.AuthorizedPortal}}</td>
+                <td>{{data.CMR}}</td>
+                <td>{{data.CasNumber}}</td>
+                <td>{{data.ChemicalName}}</td>
+                <td>{{data.CommercialNames}}</td>
+                <td>{{data.CommonName}}</td>
+                <td>{{data.EHSVersionNo}}</td>
+                <td>{{data.FileFormat}}</td>
+                <td>{{data.GENVARIANT}}</td>
+                <td>{{data.INCODE}}</td>
+                <td>{{data.IUPAC}}</td>
+                <td>{{data.LegacySDSID}}</td>
+                <td>{{data.LegacySpecID}}</td>
+                <td>{{data.ValidityArea}}</td>
+                <td>{{data.ValidityAreaDescription}}</td>
+                <td>{{data.WercsRevisionNo}}</td>
+                <td>{{data.WercsSubFormat}}</td>
             </tr>
+        </ng-template>
         </tbody>
     </nz-table>
 </nz-card>
