--- a/src/app/dashboard/result/result.component.html
+++ b/src/app/dashboard/result/result.component.html
@@ -10,6 +10,7 @@
     [nzScroll]="{x: '200px'}" [nzPageSizeOptions]="[50 ,100, 500, 5000]"
     (nzPageSizeChange)="pageSizeChanged($event)"
     (nzPageIndexChange)="pageChanged($event)"
+              [nzTotal]="total" [nzFrontPagination]="false"
     nzSize="small"
     [(nzPageIndex)]="pageIndex"
     [(nzPageSize)]="pageSize"
