--- a/src/app/shared/template/header/header.component.html
+++ b/src/app/shared/template/header/header.component.html
@@ -30,7 +30,7 @@
         <ul class="nav-right">
             <li>
                 <h3 style="margin-bottom: 0">
-                    MSDS Application
+                    Material Safety Data Sheet (MSDS) Viewer
                 </h3>
             </li>
             <li>
