--- a/src/app/dashboard/default/default-dashboard.component.html
+++ b/src/app/dashboard/default/default-dashboard.component.html
@@ -6,10 +6,11 @@
     </div>
     <div class="col-lg-6">
         <div class="text-md-right m-v-10">
-            <button   nzTitle="Click this to Search" (click)="search()"  nz-tooltip nzPlacement="left" nz-button nzType="primary"><i nz-icon nzType="search"></i>Search</button>
+            <button nzTitle="Click this to Search" (click)="search()" nz-tooltip nzPlacement="left" nz-button
+                nzType="primary"><i nz-icon nzType="search"></i>Search</button>
             <nz-divider style="background: #000" nzType="vertical"></nz-divider>
-            <button nzTitle="Click this to Reset" (click)="reset()"  nzPlacement="bottom" nz-tooltip   nz-button nzType="default"> <i nz-icon nzType="reload"
-                    theme="outline"></i>Reset</button>
+            <button nzTitle="Click this to Reset" (click)="reset()" nzPlacement="bottom" nz-tooltip nz-button
+                nzType="default"> <i nz-icon nzType="reload" theme="outline"></i>Reset</button>
         </div>
     </div>
 </div>
@@ -17,7 +18,7 @@
 <nz-divider></nz-divider>
 
 <div class="row search-screen">
-    <div class="col-md-8 col-lg-12">
+    <div class="col-md-12 col-lg-12">
         <nz-card>
 
             <div class="row">
@@ -26,8 +27,8 @@
 
                 </div>
                 <div class="col-md-4">
-                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear [(ngModel)]="searchModel.FMCBusiness"
-                        nzPlaceHolder="Select a Business">
+                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear
+                        [(ngModel)]="searchModel.FMCBusiness" nzPlaceHolder="Select a Business">
                         <nz-option *ngFor="let option of fmcBusiness" [nzLabel]="option.text" [nzValue]="option.value">
                         </nz-option>
                     </nz-select>
@@ -39,8 +40,8 @@
 
                 </div>
                 <div class="col-md-4">
-                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear [(ngModel)]="searchModel.FileFormat"
-                        nzPlaceHolder="Select a Format">
+                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear
+                        [(ngModel)]="searchModel.FileFormat" nzPlaceHolder="Select a Format">
                         <nz-option *ngFor="let option of formats" [nzLabel]="option.text" [nzValue]="option.value">
                         </nz-option>
                     </nz-select>
@@ -54,8 +55,8 @@
 
                 </div>
                 <div class="col-md-4">
-                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear [(ngModel)]="searchModel.Language"
-                        nzPlaceHolder="Select a Language">
+                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear
+                        [(ngModel)]="searchModel.Language" nzPlaceHolder="Select a Language">
                         <nz-option *ngFor="let option of languages" [nzLabel]="option.text" [nzValue]="option.value">
                         </nz-option>
                     </nz-select>
@@ -67,8 +68,8 @@
 
                 </div>
                 <div class="col-md-4">
-                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear [(ngModel)]="searchModel.WercsSubFormat"
-                        nzPlaceHolder="Select a Sub Format">
+                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzAllowClear
+                        [(ngModel)]="searchModel.WercsSubFormat" nzPlaceHolder="Select a Sub Format">
                         <nz-option *ngFor="let option of subFormats" [nzLabel]="option.text" [nzValue]="option.value">
                         </nz-option>
                     </nz-select>
@@ -89,7 +90,8 @@
                 </div>
                 <div class="col-lg-12">
                     <div class="media align-items-center">
-                        <nz-radio-group  [(ngModel)]="searchModel.SelectedDateType" (ngModelChange)="onDateTypeChange($event)" >
+                        <nz-radio-group [(ngModel)]="searchModel.SelectedDateType"
+                            (ngModelChange)="onDateTypeChange($event)">
                             <label nz-radio nzValue="A">Revision Date</label>
                             <label nz-radio nzValue="B">Published Date</label>
 
@@ -108,7 +110,9 @@
 
                                 </div>
                                 <div class="col-lg-3">
-                                    <nz-select [nzDisabled] = "isDaysOptionSelected" style="width: 100%;" nzSize="small" (ngModelChange)="onConditionChange($event)" nzShowSearch [(ngModel)]="searchModel.PublishDateFilter.FilterType"
+                                    <nz-select [nzDisabled]="isDaysOptionSelected" style="width: 100%;" nzSize="small"
+                                        (ngModelChange)="onConditionChange($event)" nzShowSearch
+                                        [(ngModel)]="searchModel.PublishDateFilter.FilterType"
                                         nzPlaceHolder="Select Condition">
                                         <nz-option nzLabel="Equals" nzValue="Equals"></nz-option>
                                         <nz-option nzLabel="Greater Than Equal To" nzValue="GreaterThanEqualsTo">
@@ -118,9 +122,12 @@
                                     </nz-select>
                                 </div>
                                 <div class="col-lg-8">
-                                    <nz-date-picker [nzDisabled] = "isDaysOptionSelected" *ngIf="!showRangeFilter" nzSize="small" [(ngModel)]="searchModel.PublishDateFilter.StartDate"
+                                    <nz-date-picker [nzDisabled]="isDaysOptionSelected" *ngIf="!showRangeFilter"
+                                        nzSize="small" [(ngModel)]="searchModel.StartDate"
                                         [nzFormat]="dateFormat" (ngModelChange)="onChange($event)"></nz-date-picker>
-                                    <nz-range-picker [nzDisabled] = "isDaysOptionSelected" *ngIf="showRangeFilter" nzSize="default" [(ngModel)]="searchModel.PublishDateFilter.StartDate"
+                                    <nz-range-picker [nzDisabled]="isDaysOptionSelected" *ngIf="showRangeFilter"
+                                         defaultValue={[moment(searchModel.StartDate,"MMM dd yyyy"),moment(searchModel.EndDate, "MMM dd yyyy")]}
+                                         nzSize="default" [(ngModel)]="dateRange"
                                         [nzFormat]="dateFormat" (ngModelChange)="onChange($event)"></nz-range-picker>
                                 </div>
                             </div>
@@ -129,12 +136,15 @@
                         <div class="col-lg-12">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <label (ngModelChange) = "onDaysOptionClicked($event)" [(ngModel)]="isDaysOptionSelected" nz-checkbox > Date in Last</label>
-                                    <nz-input-number [nzSize]="'small'" [nzStep]="1"></nz-input-number>
+                                    <label (ngModelChange)="onDaysOptionClicked($event)"
+                                        [(ngModel)]="isDaysOptionSelected" nz-checkbox> Date in Last</label>
+                                    <nz-input-number [nzSize]="'small'"
+                                        [(ngModel)]="searchModel.PublishDateFilter.LastPublishDays" [nzStep]="1">
+                                    </nz-input-number>
                                     <label> Days</label>
                                 </div>
                                 <div class="col-lg-8">
-                                   
+
                                 </div>
                             </div>
                         </div>
@@ -147,7 +157,22 @@
         <nz-card>
             <div class="row">
                 <div class="col-lg-12">
-                    <h5>Product Options</h5>
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <h5>Product Options</h5>
+                        </div>
+                        <div class="col-lg-3">
+                            <nz-select style="width: 100%;" nzSize="small" nzShowSearch nzPlaceHolder="Select Condition"
+                                [(ngModel)]="this.searchModel.ProductOptionCondition">
+                                <nz-option nzLabel="Starts With" nzValue="StartWith"></nz-option>
+                                <nz-option nzLabel="Containing" nzValue="Contains">
+                                </nz-option>
+                                <nz-option nzLabel="Exact" nzValue="Exact"></nz-option>
+
+                            </nz-select>
+                        </div>
+                    </div>
+
                     <nz-divider></nz-divider>
                     <div class="row">
                         <div class="col-md-2">
@@ -158,7 +183,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Spec Id" nzSize="small" [(ngModel)]="searchModel.SpecificationID">
+                                    <input nz-input placeholder="Enter Spec Id" nzSize="small"
+                                        [(ngModel)]="searchModel.SpecificationID">
                                 </div>
                             </div>
 
@@ -171,29 +197,11 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Product Name" nzSize="small"  [(ngModel)]="searchModel.ProductName">
+                                    <input nz-input placeholder="Enter Product Name" nzSize="small"
+                                        [(ngModel)]="searchModel.ProductName">
                                 </div>
                             </div>
 
-                        </div>
-                        <div class="col-md-2">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    Condition
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <nz-select style="width: 100%;" nzSize="small" nzShowSearch
-                                        nzPlaceHolder="Select Condition" [(ngModel)]="selectedValue">
-                                        <nz-option nzLabel="Starts With" nzValue="StartWith"></nz-option>
-                                        <nz-option nzLabel="Containing" nzValue="GreaterThanEqualsTo">
-                                        </nz-option>
-                                        <nz-option nzLabel="Exact" nzValue="Exact"></nz-option>
-
-                                    </nz-select>
-                                </div>
-                            </div>
                         </div>
                         <div class="col-md-2">
                             <div class="row">
@@ -203,7 +211,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter CAS" nzSize="small" [(ngModel)]="searchModel.CasNumber">
+                                    <input nz-input placeholder="Enter CAS" nzSize="small"
+                                        [(ngModel)]="searchModel.CasNumber">
                                 </div>
                             </div>
                         </div>
@@ -215,7 +224,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Chemical Name" nzSize="small" [(ngModel)]="searchModel.ChemicalName">
+                                    <input nz-input placeholder="Enter Chemical Name" nzSize="small"
+                                        [(ngModel)]="searchModel.ChemicalName">
                                 </div>
                             </div>
                         </div>
@@ -227,9 +237,24 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Common Name" nzSize="small" [(ngModel)]="searchModel.CommonName">
+                                    <input nz-input placeholder="Enter Common Name" nzSize="small"
+                                        [(ngModel)]="searchModel.CommonName">
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    Trade Name
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <input nz-input placeholder="Enter Trade Name" nzSize="small"
+                                        [(ngModel)]="searchModel.TradeName">
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -239,19 +264,7 @@
                 <div class="col-lg-12">
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    Trade Name
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Trade Name" nzSize="small" [(ngModel)]="searchModel.TradeName">
-                                </div>
-                            </div>
 
-                        </div>
                         <div class="col-md-2">
                             <div class="row">
                                 <div class="col-lg-12">
@@ -260,7 +273,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter Commercial Names" nzSize="small" [(ngModel)]="searchModel.CommercialNames">
+                                    <input nz-input placeholder="Enter Commercial Names" nzSize="small"
+                                        [(ngModel)]="searchModel.CommercialNames">
                                 </div>
                             </div>
 
@@ -273,7 +287,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter IUPAC" nzSize="small" [(ngModel)]="searchModel.IUPAC">
+                                    <input nz-input placeholder="Enter IUPAC" nzSize="small"
+                                        [(ngModel)]="searchModel.IUPAC">
                                 </div>
                             </div>
                         </div>
@@ -285,7 +300,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <input nz-input placeholder="Enter IN Code" nzSize="small" [(ngModel)]="searchModel.INCODE">
+                                    <input nz-input placeholder="Enter IN Code" nzSize="small"
+                                        [(ngModel)]="searchModel.INCODE">
                                 </div>
                             </div>
                         </div>
